# zhcpa-operation

./: .gitignore  .gitmodules  README.md  ci-cd.excalidraw  draft.ipynb  playground.ipynb  pyproject.toml  quick_draft.ipynb  system.excalidraw
.github/workflows/: terraform.yml
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: avatar-menu.tsx  main-nav.tsx  meta-theme-detector.tsx  mobile-nav.tsx  providers.tsx  session-provider.ts  settings.tsx  theme-toggle.tsx
frontend/src/config/: nav-config.ts  site-config.ts
frontend/src/types/: nav.ts  supabase.ts
functions/: playground.ipynb
functions/op/: overtime.py  shared.py
lambda/: .gitignore  Dockerfile  Makefile  lambda.py  playground.ipynb  pyproject.toml
lambda/op/: __main__.py  attendance.py  env.py  leave.py  logger.py  public_holidays.py  secret.py  shared.py  supabase.py  utils.py  workflows.py
lambda/src/: playground.ipynb  pyproject.toml
lambda/src/op/: __main__.py  attendance.py  opuser.py  public_holidays.py  supabase.py  utils.py  workflows.py
lambda/tests/: attendance.py  leave.py  utils.py
op/: __main__.py  attendance.py  cache.py  leave.py  opuser.py  overtime.py  shared.py  supabase.py  utils.py  workflows.py
terraform/: .gitignore  main.tf  outputs.tf  variables.tf  versions.tf
web/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/src/: middleware.ts
web/src/app/: layout.tsx
(+21 files in other folders)
