[tool.poetry]
name = "zhcpa-operation"
version = "0.1.0"
description = ""
authors = ["Sam Sze"]
license = "MIT"
readme = "README.md"
packages = [{include = "zhcpa_operation"}]

[tool.poetry.dependencies]
python = "^3.11"
alibabacloud-dingtalk = "^2.0.26"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
